--- a/test/fiddle.html
+++ b/test/fiddle.html
@@ -12,11 +12,11 @@
        <div class="accordion" id="accordion">
            <div class="accordion-group">
             <div class="accordion-heading">
-              <a class="accordion-toggle" data-toggle="collapse" data-target="#collapseContextJS" href="#collapseContextJS">
+              <a class="accordion-toggle" data-toggle="collapse" data-target="#collapseContextSource" href="#collapseContextSource">
                 <span class="badge badge-info">CONTEXT SOURCE</span> 
               </a>
             </div>
-            <div id="collapseContextJS" class="accordion-body collapse">
+            <div id="collapseContextSource" class="accordion-body collapse">
               <div class="accordion-inner">
                <pre><code data-bind="text: jsContextStr"></code></pre>       
 
@@ -25,10 +25,10 @@
           </div>
           <div class="accordion-group">
             <div class="accordion-heading">
-              <a class="accordion-toggle"  data-toggle="collapse" data-target="#collapseContext" href="#collapseContext"><span class="badge badge-info">CONTEXT BREAKDOWN</span>               
+              <a class="accordion-toggle"  data-toggle="collapse" data-target="#collapseContextBreakdown" href="#collapseContextBreakdown"><span class="badge badge-info">CONTEXT BREAKDOWN</span>               
               </a>
             </div>
-            <div id="collapseContext" class="accordion-body collapse in">
+            <div id="collapseContextBreakdown" class="accordion-body collapse in">
               <div class="accordion-inner">
                     <table class="table" id="testCaseList">
                     <tbody data-bind="'foreach': testCases">
