--- a/hitchscript/hitchscript.html
+++ b/hitchscript/hitchscript.html
@@ -33,8 +33,6 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">Theme <b class="caret"></b></a>
               <ul class="dropdown-menu" id="theme-menu">
-                <li><a href="default/">Default</a></li>
-                <li class="divider"></li>
                 <li><a href="?theme=amelia">Amelia</a></li>
                 <li><a href="?theme=cerulean">Cerulean</a></li>
                 <li><a href="?theme=cosmo">Cosmo</a></li>
@@ -51,7 +49,7 @@
             </li>
           </ul>
           <ul class="nav pull-right" id="main-menu-right">
-            <li class=""><a rel="tooltip" href="#" title=""> {loginButtons} <i class="icon-share-alt"></i></a></li>
+            <li class=""><a rel="tooltip" href="#" title=""> {loginButtons} </li>
           </ul>
         </div>
       </div>
