--- a/hitchscript/hitchscript.html
+++ b/hitchscript/hitchscript.html
@@ -8,10 +8,12 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
+
    <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.5/require.min.js"></script>
+
    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
-   
+
 </head>
 <body>
     {{> hitchscript}}
@@ -49,7 +51,7 @@
             </li>
           </ul>
           <ul class="nav pull-right" id="main-menu-right">
-            <li class=""><a rel="tooltip" href="#" title=""> {loginButtons} </li>
+            <li class=""><a rel="tooltip" href="#" title=""> {{loginButtons}} </li>
           </ul>
         </div>
       </div>
